--- a/source/_posts/小脑没发育的猴子.md
+++ b/source/_posts/小脑没发育的猴子.md
@@ -71,3 +71,7 @@ tags:
 附赠出提纳里炫耀的朋友圈：
 
 ![猴子炫耀出提纳里.jpg](https://s2.loli.net/2023/04/11/zqDwMRuK6ZLjYsg.jpg)
+
+![猴子出提纳里2.jpg](https://s2.loli.net/2023/04/11/LBrGziOTtVuHXZJ.jpg)
+
+![猴子出提纳里3.jpg](https://s2.loli.net/2023/04/11/sXrIWulvjUxnhbk.jpg)
